# neural

./: README.md  setup.cfg
evaluation/: Convergence_rate_comparison.ipynb  SGD_parameters.ipynb  sgd.ipynb  utils.py
examples/: classic.ipynb  classic.pkl  convolutional.ipynb  convolutional.pkl  simple.ipynb  utils.py
neural/: __init__.py  _loader.py  _tensor.py  layers.py
neural/nn/: __init__.py  _activation.py  _functions.py  _layers.py  _loss.py  _meta.py  _module.py  _operations.py
neural/optim/: __init__.py  _adam.py  _optim.py  _sgd.py
