[metadata]
name = neural
description = Python framework for implementing and training neural networks.
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1
author = Dusan Ilic

[options]
packages = 
    neural
    neural.nn
    neural.optim
python_requires = >=3
install_requires =
    numpy
    scipy
include_package_data = True
